--- a/TablaDeMultiplicar/app/src/main/res/layout/activity_main.xml
+++ b/TablaDeMultiplicar/app/src/main/res/layout/activity_main.xml
@@ -32,8 +32,8 @@
 
     <Button
         android:id="@+id/boton0"
-        android:layout_width="285dp"
-        android:layout_height="66dp"
+        android:layout_width="289dp"
+        android:layout_height="67dp"
         android:layout_marginTop="24dp"
         android:text="0"
         android:textSize="34sp"
@@ -166,12 +166,13 @@
 
     <Button
         android:id="@+id/botonJugar"
-        android:layout_width="410dp"
-        android:layout_height="95dp"
+        android:layout_width="290dp"
+        android:layout_height="94dp"
         android:layout_marginBottom="16dp"
         android:text="Empezar partida"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
