Con tipografia y fondo verde

--- a/TablaDeMultiplicar/app/src/main/res/layout/activity_main2.xml
+++ b/TablaDeMultiplicar/app/src/main/res/layout/activity_main2.xml
@@ -4,14 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#3FD845"
     tools:context=".MainActivity2">
 
     <TextView
         android:id="@+id/texto6"
         android:layout_width="213dp"
         android:layout_height="60dp"
+        android:fontFamily="@font/escolar"
         android:text="0 x 0 ="
         android:textAlignment="viewEnd"
+        android:textColor="#FDFCFD"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -24,8 +27,10 @@
         android:id="@+id/resultado6"
         android:layout_width="90dp"
         android:layout_height="60dp"
+        android:fontFamily="@font/escolar"
         android:text="8"
         android:textAlignment="center"
+        android:textColor="#FDFCFD"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,8 +43,10 @@
         android:id="@+id/texto4"
         android:layout_width="213dp"
         android:layout_height="60dp"
+        android:fontFamily="@font/escolar"
         android:text="0 x 0 ="
         android:textAlignment="viewEnd"
+        android:textColor="#FDFCFD"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,8 +59,10 @@
         android:id="@+id/resultado4"
         android:layout_width="90dp"
         android:layout_height="60dp"
+        android:fontFamily="@font/escolar"
         android:text="8"
         android:textAlignment="center"
+        android:textColor="#FDFCFD"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -66,8 +75,10 @@
         android:id="@+id/texto5"
         android:layout_width="213dp"
         android:layout_height="60dp"
+        android:fontFamily="@font/escolar"
         android:text="0 x 0 ="
         android:textAlignment="viewEnd"
+        android:textColor="#FDFCFD"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -80,8 +91,10 @@
         android:id="@+id/resultado5"
         android:layout_width="90dp"
         android:layout_height="60dp"
+        android:fontFamily="@font/escolar"
         android:text="8"
         android:textAlignment="center"
+        android:textColor="#FDFCFD"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -94,8 +107,10 @@
         android:id="@+id/texto3"
         android:layout_width="213dp"
         android:layout_height="60dp"
+        android:fontFamily="@font/escolar"
         android:text="0 x 0 ="
         android:textAlignment="viewEnd"
+        android:textColor="#FDFCFD"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -108,8 +123,10 @@
         android:id="@+id/resultado3"
         android:layout_width="90dp"
         android:layout_height="60dp"
+        android:fontFamily="@font/escolar"
         android:text="8"
         android:textAlignment="center"
+        android:textColor="#FDFCFD"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -122,8 +139,10 @@
         android:id="@+id/texto2"
         android:layout_width="213dp"
         android:layout_height="60dp"
+        android:fontFamily="@font/escolar"
         android:text="0 x 0 ="
         android:textAlignment="viewEnd"
+        android:textColor="#FDFCFD"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -136,8 +155,10 @@
         android:id="@+id/resultado2"
         android:layout_width="90dp"
         android:layout_height="60dp"
+        android:fontFamily="@font/escolar"
         android:text="8"
         android:textAlignment="center"
+        android:textColor="#FDFCFD"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -150,8 +171,10 @@
         android:id="@+id/texto1"
         android:layout_width="213dp"
         android:layout_height="60dp"
+        android:fontFamily="@font/escolar"
         android:text="0 x 0 ="
         android:textAlignment="viewEnd"
+        android:textColor="#FDFCFD"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -164,8 +187,10 @@
         android:id="@+id/resultado1"
         android:layout_width="90dp"
         android:layout_height="60dp"
+        android:fontFamily="@font/escolar"
         android:text="8"
         android:textAlignment="center"
+        android:textColor="#FDFCFD"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -178,8 +203,10 @@
         android:id="@+id/texto0"
         android:layout_width="213dp"
         android:layout_height="60dp"
+        android:fontFamily="@font/escolar"
         android:text="0 x 0 ="
         android:textAlignment="viewEnd"
+        android:textColor="#FDFCFD"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -192,8 +219,10 @@
         android:id="@+id/texto7"
         android:layout_width="213dp"
         android:layout_height="60dp"
+        android:fontFamily="@font/escolar"
         android:text="0 x 0 ="
         android:textAlignment="viewEnd"
+        android:textColor="#FDFCFD"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -206,8 +235,10 @@
         android:id="@+id/resultado7"
         android:layout_width="90dp"
         android:layout_height="60dp"
+        android:fontFamily="@font/escolar"
         android:text="8"
         android:textAlignment="center"
+        android:textColor="#FDFCFD"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -220,8 +251,10 @@
         android:id="@+id/resultado8"
         android:layout_width="90dp"
         android:layout_height="60dp"
+        android:fontFamily="@font/escolar"
         android:text="8"
         android:textAlignment="center"
+        android:textColor="#FDFCFD"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -234,8 +267,10 @@
         android:id="@+id/resultado9"
         android:layout_width="90dp"
         android:layout_height="60dp"
+        android:fontFamily="@font/escolar"
         android:text="8"
         android:textAlignment="center"
+        android:textColor="#FDFCFD"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -248,8 +283,10 @@
         android:id="@+id/resultado10"
         android:layout_width="90dp"
         android:layout_height="60dp"
+        android:fontFamily="@font/escolar"
         android:text="8"
         android:textAlignment="center"
+        android:textColor="#FDFCFD"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -262,8 +299,10 @@
         android:id="@+id/texto8"
         android:layout_width="213dp"
         android:layout_height="60dp"
+        android:fontFamily="@font/escolar"
         android:text="0 x 0 ="
         android:textAlignment="viewEnd"
+        android:textColor="#FDFCFD"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -276,8 +315,10 @@
         android:id="@+id/texto9"
         android:layout_width="213dp"
         android:layout_height="60dp"
+        android:fontFamily="@font/escolar"
         android:text="0 x 0 ="
         android:textAlignment="viewEnd"
+        android:textColor="#FDFCFD"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -290,8 +331,10 @@
         android:id="@+id/texto10"
         android:layout_width="213dp"
         android:layout_height="60dp"
+        android:fontFamily="@font/escolar"
         android:text="0 x 0 ="
         android:textAlignment="viewEnd"
+        android:textColor="#FDFCFD"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -304,8 +347,10 @@
         android:id="@+id/resultado0"
         android:layout_width="90dp"
         android:layout_height="60dp"
+        android:fontFamily="@font/escolar"
         android:text="8"
         android:textAlignment="center"
+        android:textColor="#FDFCFD"
         android:textSize="48sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
