--- a/TablaDeMultiplicar/app/src/main/res/layout-land/activity_main.xml
+++ b/TablaDeMultiplicar/app/src/main/res/layout-land/activity_main.xml
@@ -9,22 +9,23 @@
 
     <Button
         android:id="@+id/boton10"
-        android:layout_width="291dp"
-        android:layout_height="73dp"
+        android:layout_width="371dp"
+        android:layout_height="65dp"
         android:backgroundTint="#0B5506"
         android:fontFamily="@font/escolar"
         android:text="10"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.812" />
+        app:layout_constraintVertical_bias="0.728" />
 
     <Button
         android:id="@+id/boton2"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:backgroundTint="#0B5506"
         android:fontFamily="@font/escolar"
         android:text="2"
@@ -33,12 +34,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.339" />
+        app:layout_constraintVertical_bias="0.276" />
 
     <Button
         android:id="@+id/boton0"
-        android:layout_width="289dp"
-        android:layout_height="67dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:layout_marginTop="24dp"
         android:backgroundTint="#0B5506"
         android:fontFamily="@font/escolar"
@@ -46,14 +47,15 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.079"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.159" />
+        app:layout_constraintVertical_bias="0.221" />
 
     <Button
         android:id="@+id/boton6"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:layout_marginBottom="40dp"
         android:backgroundTint="#0B5506"
         android:fontFamily="@font/escolar"
@@ -61,48 +63,18 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.8"
+        app:layout_constraintHorizontal_bias="0.276"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.532" />
+        app:layout_constraintVertical_bias="0.565" />
 
     <Button
         android:id="@+id/boton7"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:backgroundTint="#0B5506"
         android:fontFamily="@font/escolar"
         android:text="7"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.175"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.667" />
-
-    <Button
-        android:id="@+id/boton1"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:backgroundTint="#0B5506"
-        android:fontFamily="@font/escolar"
-        android:text="1"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toBottomOf="@+id/boton7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.175"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.506" />
-
-    <Button
-        android:id="@+id/boton5"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:backgroundTint="#0B5506"
-        android:fontFamily="@font/escolar"
-        android:text="5"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -110,9 +82,38 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
+        android:id="@+id/boton1"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:backgroundTint="#0B5506"
+        android:fontFamily="@font/escolar"
+        android:text="1"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="@+id/boton7"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.276"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.554" />
+
+    <Button
+        android:id="@+id/boton5"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
+        android:backgroundTint="#0B5506"
+        android:fontFamily="@font/escolar"
+        android:text="5"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.079"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
         android:id="@+id/boton3"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:layout_marginBottom="40dp"
         android:backgroundTint="#0B5506"
         android:fontFamily="@font/escolar"
@@ -120,44 +121,43 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.809"
+        app:layout_constraintHorizontal_bias="0.725"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.36" />
+        app:layout_constraintVertical_bias="0.314" />
 
     <Button
         android:id="@+id/boton8"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:backgroundTint="#0B5506"
         android:fontFamily="@font/escolar"
         android:text="8"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.725"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.667" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/boton9"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:backgroundTint="#0B5506"
         android:fontFamily="@font/escolar"
         android:text="9"
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.809"
+        app:layout_constraintHorizontal_bias="0.948"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.667" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/boton4"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:layout_marginBottom="40dp"
         android:backgroundTint="#0B5506"
         android:fontFamily="@font/escolar"
@@ -165,10 +165,10 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.175"
+        app:layout_constraintHorizontal_bias="0.948"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.532" />
+        app:layout_constraintVertical_bias="0.314" />
 
     <EditText
         android:id="@+id/editTextTextPersonName"
@@ -183,16 +183,16 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/botonJugar"
-        android:layout_width="290dp"
-        android:layout_height="94dp"
-        android:layout_marginBottom="16dp"
+        android:layout_width="369dp"
+        android:layout_height="67dp"
+        android:layout_marginBottom="24dp"
         android:backgroundTint="#0B5506"
         android:fontFamily="@font/escolar"
         android:text="Empezar partida"
@@ -200,6 +200,7 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
